--- a/portfolio.html
+++ b/portfolio.html
@@ -211,8 +211,9 @@
             <a href="WEBSTUDIO"><span class="web">web</span>
                 <span class="footer-studio">studio</span></a>
             <p class="social-media">Social media</p>
+            <p class="subscribe-footer-p">Subscribe</p>
             <div class="footer-socials">
-                <p>Increase the flow of customers and<br>sales for your business with digital<br>marketing
+                <p class="socials-p">Increase the flow of customers and<br>sales for your business with digital<br>marketing
                     & growth solutions.</p>
                 <div class="footer-icons">
                     <a class="footer-icon">
@@ -236,8 +237,20 @@
                         </svg>
                     </a>
                 </div>
+        
+                <div class="subscribe">
+                    <form class="subscribe-form">
+                        <input type="text" placeholder="E-mail" class="subscribe-text">
+                        <button class="subscribe-button">
+                            <p class="subscribe-button-p">Subscribe</p>
+                            <svg width="24px" height="24px" class="icon icon-Frame-3">
+                                <use xlink:href="./images/icons.svg#icon-Frame-3"></use>
+                            </svg>
+                        </button>
+                    </form>
+                </div>
             </div>
-         </footer>
+        </footer>
     </div>
 </body>
 </html>
