--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework#5</title>
+    <title>Homework#6</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/modern-normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -57,6 +57,53 @@
                             <use xlink:href="./images/icons.svg#icon-close"></use>
                         </svg>
                     </button>
+
+                        <h5 class="modal-heading">Leave your contacts and we will call you back</h5>
+
+                        <form class="service-form">
+                                <label for="name" class="service-name">
+                                    <span class="input-name">Name</span>
+                                    <input type="text" class="service-box">
+                                    <svg width="18" height="18" class="service-icon">
+                                        <use href="./images/icons.svg#person"></use>
+                                    </svg>
+                                </label>
+
+                                <label for="phone" class="service-name">
+                                    <span class="input-name">Phone</span>
+                                    <input type="text" class="service-box">
+                                    <svg width="18" height="18" class="service-icon">
+                                        <use href="./images/icons.svg#phone"></use>
+                                    </svg>
+                                </label>
+
+                                <label for="email" class="service-name">
+                                    <span class="input-name">Email</span>
+                                    <input type="email" class="service-box">
+                                    <svg width="18" height="18" class="service-icon">
+                                        <use href="./images/icons.svg#email"></use>
+                                    </svg>
+                                </label>
+
+                                <label for="comment" class="service-name">
+                                    <span class="input-name">Comment</span>
+                                    <textarea class="service-text-area" rows="7" placeholder="Text Input"></textarea>
+                                </label>
+                                
+                                <label for="agree" class="service-agree">
+                                    <input type="checkbox" name="agree" class="agree-box">
+                                    <svg width="16" height="16" class="check-icon">
+                                        <use href="./images/icons.svg#checkbox"></use>
+                                    </svg>
+                                    <span class="privacy-text">I accept the terms and conditions of the 
+                                        <a href="#">Privacy Policy</a>
+                                    </span>
+                                </label>
+                                <div class="">
+                                    <button class="send-button">Send</button>
+                                </div>
+                                
+                        </form>
                 </div>
             </div>    
         </div>
@@ -303,8 +350,9 @@
         <a href="WEBSTUDIO"><span class="web">web</span>
             <span class="footer-studio">studio</span></a>
             <p class="social-media">Social media</p>
+            <p class="subscribe-footer-p">Subscribe</p>
             <div class="footer-socials">
-                    <p>Increase the flow of customers and<br>sales for your business with digital<br>marketing
+                    <p class="socials-p">Increase the flow of customers and<br>sales for your business with digital<br>marketing
                     & growth solutions.</p>
                 <div class="footer-icons">
                     <a class="footer-icon">
@@ -327,6 +375,18 @@
                             <use xlink:href="./images/icons.svg#icon-linkedin2"></use>
                         </svg>
                     </a>
+                </div>
+
+                <div class="subscribe">
+                    <form class="subscribe-form">
+                        <input type="text" placeholder="E-mail" class="subscribe-text">
+                        <button class="subscribe-button">
+                            <p class="subscribe-button-p">Subscribe</p>
+                            <svg width="24px" height="24px" class="icon icon-Frame-3">
+                                <use xlink:href="./images/icons.svg#icon-Frame-3"></use>
+                            </svg>
+                        </button>
+                    </form>
                 </div>
             </div>
     </footer>
